--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "husky-script": "npm run fixAll && git add ."
   },
   "dependencies": {
+    "@fontsource/jost": "^5.2.6",
+    "@fontsource/open-sans": "^5.2.6",
+    "@fontsource/roboto": "^5.2.6",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
