--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@fontsource/open-sans": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/date-fns": "^2.6.0",
+    "@types/react-datepicker": "^6.2.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
