--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/date-fns": "^2.6.0",
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
